--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
 torch
+numpy~=1.18.1
+pandas~=1.0.1
+matplotlib~=3.1.3
+torchvision~=0.6.1
+pillow~=7.0.0
+tqdm~=4.42.1
+scikit-image~=0.16.2
+scipy~=1.4.1
+opencv-python
